Fix horizontally overflowing things on mobile

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -16,16 +16,18 @@ html {
   height: 100%;
   @include scrollbars(var(--primary-dark), var(--black-2));
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 body {
-  flex: 0 0 100%;
+  flex: 0 0 auto;
+  width: 100%;
   min-height: 100%;
   font-size: 1.4rem;
   font-size: clamp(1.2rem, calc(1.4 * (10px + 0.33vw)), 2rem);
   font-family: 'Space Grotesk', Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 400;
-  line-height: 1.685;
+  line-height: 1.8;
   background: #0e0f12;
   color: var(--white-0);
   -webkit-font-smoothing: antialiased;
@@ -52,7 +54,8 @@ body {
 }
 
 #app {
-  flex: 1 1 100%;
+  flex: 1 1 auto;
+  width: 100%;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
