--- a/src/scss/routes/_home.scss
+++ b/src/scss/routes/_home.scss
@@ -17,7 +17,7 @@
 
   .featured-projects {
     flex: 2 0 25%;
-    min-inline-size: 20em;
+    min-inline-size: min(20em, 100%);
     max-inline-size: 27em;
     display: flex;
     flex-direction: column;
@@ -25,6 +25,6 @@
     align-items: stretch;
     margin-block: calc(max(14vh, 74px) * 0.66);
     // margin-inline-end: 75px;
-    gap: 30px;
+    gap: 45px;
   }
 }
